-Added option -T to rasterize to switch between "dicing", i.e., averaging the weights of 
 the mask polygons within the rasterizer polygons and returning the weighted rasterizer polygons,
 and "slicing", i.e., splitting each mask polygon so that is in only one rasterizer polygon
 and returning the new mask polygons (same behavior as pixelize). Using -T will make rasterize
 do slicing - this is quite useful for trimming a mask to a specified region, hence the "T".

5 April 2009
MANGLE 2.2 RELEASE
Upgrades from mangle2.1:
-Added option -B to balkanize to add weights together, or take the maximum or minimum weight instead of just using the last weight in the polygon file
-Added option -W to polyid to write out the weights of the polygons containing each point rather than the id numbers
-Snap now renormalizes input vectors to ensure that all vectors are exact unit vectors
-Fixed bug in weight so that weights are not skipped in file when no midpoint is found
-Upgraded matlab plotting script to allow for an arbitrary range of weights
-Changed /dev/null paths in shell scripts to avoid bub in some linux flavors
-Increased NPOLYSMAX to 90000000 
-Added compile flags to allow mangle to write files larger than 2G

--Molly Swanson
--------------------------------------------------------------------------------

25 July 2008
MANGLE 2.1 RELEASE
Upgrades from mangle2.0:
-added versions for Mac OSX (Intel and PowerPC)
-added versions that use real*8 in fortran and double in C (as opposed to real*10 and long double)
-compiled binaries statically to allow for greater portability
-added new example scripts (including an SDSS example) 
-made extensive improvements to existing scripts
-added a script to automatically set up mangle environment variables
-added "snapped" and "balkanized" keywords so polygon files can automatically track whether they've been snapped or balkanized
-fixed bug in rasterize that assigned the wrong weights to output polygons

--Molly Swanson